[package]
edition = "2018"
name = "async-std-futures"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.9.0", features = ["attributes"]}
random-seed-future = {path = "../random-seed-future"}
futures = "*"